--- a/build.xml
+++ b/build.xml
@@ -5,14 +5,22 @@
 
 	<target name="ci" depends="buildPackageStage, runPackageStage, buildPackageDw, compilePackageEmptyCiDB, runPackageDw"/>
 
-    <target name="buildPackageStage">
+    <target name="buildXMLHelpersPackage">
+        <echo>Rebuiling the xml_helpers database package and body in ${stagingInstance}</echo>
+        <exec executable="sqlplus" failonerror="true">
+            <arg value="${wqp_storet_username}/${wqp_storet_password}@${stagingInstance}"/>
+            <arg value="@${basedir}/xml_helpers.sql"/>
+        </exec>
+    </target>
+
+    <target name="buildPackageStage" depends="buildXMLHelpersPackage">
         <echo>Rebuiling the etl database package and body in ${stagingInstance}</echo>
         <exec executable="sqlplus" failonerror="true">
             <arg value="${wqp_storet_username}/${wqp_storet_password}@${stagingInstance}"/>
             <arg value="@${basedir}/create_storet_objects_stage.sql"/>
         </exec>
     </target>
-    
+	
     <target name="scpScriptStage">
         <echo>Copy the script to ${storet_host}</echo>
         <scp file="storet_dump.sh" todir="storet_user:${storet_password}@${storet_host}:/home/storet_user" trust="true"/>
