--- a/build.xml
+++ b/build.xml
@@ -42,7 +42,7 @@
             failonerror="true"
             username="storet_user"
             password="${storet_password}"
-            command="bash -e -x storet_dump.sh ${expTableCnt}"
+            command="bash -e -x storet_dump.sh ${weekly_monthly}"
             outputproperty="pullResult"
         />
     </target>
@@ -50,7 +50,7 @@
     <target name="setStopRun">
         <echo>Check if we had changes and should continue</echo>
         <condition property="stopRun">
-            <contains string="${pullResult}" substring="no differences" />
+            <contains string="${pullResult}" substring="No new export to process." />
         </condition>
     </target>
         
