--- a/build.xml
+++ b/build.xml
@@ -25,7 +25,7 @@
 
     <target name="scpScriptStage">
         <echo>Copy the script to ${storet_host}</echo>
-        <scp file="storet_dump.sh" todir="storet_user:${storet_password}@${storet_host}:/home/storet_user" trust="true"/>
+        <scp file="storet_dump.sh" todir="storet_user:${storet_password}@${storet_host}:/pdc/temp" trust="true"/>
     </target>
 
     <target name="dos2unixStage">
